Added images to episode screen and a few more changes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -92,5 +92,7 @@
     "tapAgainToLeave": "Tap back again to leave",
     "couldNotFindMovies": "Couldn't find any content with the especified filters :(",
     "season": "Season",
-    "episode": "Episode"
+    "episode": "Episode",
+    "images": "Images",
+    "videos": "Videos"
 }
