Watch Provider filters 1/X

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -94,5 +94,6 @@
     "season": "Season",
     "episode": "Episode",
     "images": "Images",
-    "videos": "Videos"
+    "videos": "Videos",
+    "watchProviders": "Watch Providers"
 }
