--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -94,5 +94,6 @@
     "season": "Temporada",
     "episode": "Episódio",
     "images": "Imagens",
-    "videos": "Vídeos"
+    "videos": "Vídeos",
+    "watchProviders": "Serviços de Vídeo"
 }
