--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -42,8 +42,8 @@
     "light": "Claro",
     "homeScreenTile": "Modo de exibição da tela Principal",
     "dateFormat": "Formato da data",
-    "pContentLanguage": "Idioma do Conteúdo Primária",
-    "sContentLanguage": "Idioma do Conteúdo Secundária",
+    "pContentLanguage": "Idioma Primário do Conteúdo",
+    "sContentLanguage": "Idioma Secundário do Conteúdo",
     "includeAdult": "Incluir Conteúdo Adulto",
     "yes": "Sim",
     "no": "Não",
@@ -83,7 +83,7 @@
     "appMade": "App feito utilizando ",
     "goToWebSite": "Vá para o WebSite deles",
     "disclaimer": "Nota",
-    "disclaimerText": "Não temos nenhum tipo de afiliação com o TMDB, este é apenas um aplicativo feito usando a sua API, qualquer problema relacionado ao conteúdo deve ser relatado em seu website",
+    "disclaimerText": "Não temos nenhum tipo de afiliação com o TMDB, este é apenas um aplicativo feito usando a sua API, qualquer problema relacionado ao conteúdo deve ser relatado no website deles",
     "aboutText": "Informações sobre o APP",
     "error": "ERRO",
     "homeErrorText1": "Não foi possível conectar com os servidor do TMDB",
@@ -95,5 +95,20 @@
     "episode": "Episódio",
     "images": "Imagens",
     "videos": "Vídeos",
-    "watchProviders": "Serviços de Vídeo"
+    "watchProviders": "Serviços de Vídeo",
+    "secondaryLanguageInfo": "O idioma secundário do conteúdo é usado para exibir o texto do filme/série que não está disponível no idioma principal",
+    "wpFilerHeading": "O conteúdo deste filtro muda dependendo do país selecionado e de se você está procurando por Filmes ou Séries",
+    "rememberSelected": "Lembrar Selecionados para ",
+    "filterMode": "Modo do Filtro",
+    "genresHasAllSelected": "Tem todos os gêneros selecionados",
+    "genresHasOneSelected": "Tem um dos gêneros selecionados",
+    "whereToWatch": "Onde assistir",
+    "noWPFound": "Nenhuma informação dos provedores de conteúdo encontrada para o país selecionado",
+    "wpAllCountries": "Ver provedores de conteúdo para todos os países",
+    "stream": "Streaming",
+    "buy": "Comprar",
+    "rent": "Alugar",
+    "wAds": "Com propaganda",
+    "free": "Grátis",
+    "viewForAllCountries": "Ver de todos os países"
 }
